--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 :root {
+  --brand-primary-color: #e6fa36;
+  --brand-secondary-color: #c29be7;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -18,6 +20,26 @@
   -webkit-text-size-adjust: 100%;
 }
 
+*::-webkit-scrollbar,
+*::-webkit-scrollbar:horizontal {
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--brand-secondary-color);
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: var(--brand-primary-color);
+}
+
+* {
+  scrollbar-width: auto;
+  scrollbar-color: var(--brand-primary-color) transparent;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -28,11 +50,8 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 h1 {
